--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="zh-CN">
 <head>
-  <meta charset="utf-8">
-  <title>我的网页</title>
+  <meta charset="UTF-8">
+  <title>我的第一个网页</title>
 </head>
 <body>
-  <h1>Hello World</h1>
+  <h1>你好，世界！</h1>
+  <p>这是我发布的第一个网页。</p>
 </body>
 </html>
